# AutoVid

./: Agent.md  README.md  blueprint_motor_audiovisual.md
backend/: pyproject.toml
backend/.smoke/project/cache/smoke-project-001/scenes/smoke-scene-001/59f8bd4ecce9de9a9ef63ff8e187afb247f473eab8ddedd916f1ec5507db1a20/: render_manifest.json  subtitles.ass
backend/app/: __init__.py  main.py  runtime.py
backend/app/api/routes/: assets.py  health.py  jobs.py  projects.py  runtime.py
backend/app/core/: settings.py
backend/app/domain/: models.py
backend/app/services/: asset_library.py  cache_fingerprint.py  ffmpeg_command_builder.py  ffmpeg_executor.py  job_manager.py  progress_broadcaster.py  project_service.py  render_compiler.py  render_manifest_service.py  render_pipeline.py  render_plan_builder.py  runtime_diagnostics.py  subtitle_ass_builder.py
backend/nodeav_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: export_schemas.py  smoke_render.py
backend/tests/: test_asset_library.py  test_example_fixture.py  test_job_manager.py  test_progress_websocket.py  test_project_service.py  test_render_compiler.py  test_runtime_diagnostics.py  test_runtime_settings.py
docs/: estado_actual_proyecto.md  progreso_desarrollo.md  smoke_test_render.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: main.tsx
shared/examples/: README.md  minimal_project.avproj
shared/jsonschema/: README.md  project.json  render_job_record.json  render_plan.json  runtime_health_report.json  scene_node.json  timeline_scene.json
(+13 files in other folders)
