[project]
name = "nodeav-backend"
version = "0.1.0"
description = "Backend local para NodeAV"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
